# medial-ax

./: .gitignore  BubbleSort.ipynb  Cargo.toml  Cleaned.ipynb  CleanedLoop.ipynb  Combined.ipynb  LICENSE.md  Matrices.ipynb  Matrix reduction.ipynb  Program_description.md  README.md  adaptive_grid.ipynb  blender-first-3d-ma.blend  blender-first-3d-ma.blend1  blender-render.blend  debug-rs.ipynb  generations.md  index.html  issue-15.ipynb  json.json  make-demos.py  makemedialaxes.ipynb  makethings.ipynb  mars.ipynb  medial_axes.ipynb  new_stl_file.stl  package-lock.json  package.json  parallel.ipynb  requirements.txt  rustbook.ipynb  scratch.ipynb  testfile  update-rust.sh  voronoi.ipynb  voronoi_medial.ipynb
assets/: index-C8_kIYCc.js  index-DXzdrNZP.js  index-tqU-q7kU.js  mars_wasm_bg-UGJjbf4W.wasm  prune-CNpArSuS.js  prune-CRKJ_eof.js  prune-wXOzyBe2.js  vineyards-BMEZf9ZX.js  vineyards-B_b9VHGd.js  vineyards-C9PqtTBl.js
blender/: better_shoebox.blend  better_shoebox.blend1  confused_pretzel.blend  confused_pretzel.blend1  ellipses_a_b.blend  ellipses_a_b.blend1  extruded_rect.blend  extruded_rect.blend1  figure8.blend  figure8.blend1  klein.blend  klein.blend1  klein2.blend  klein2.blend1  maybe_pipe.blend  maybe_pipe.blend1  maze.blend  maze.blend1  maze_2.blend  maze_2.blend1  rect_and_shoebox.blend  rect_and_shoebox.blend1  shoebox.blend  shoebox.blend1  squished_cyl.blend  squishedtorus.blend  squishedtorus.blend1  vor_cyl_med_ax.blend  vor_cyl_med_ax.blend1
blender/unusable_cool_things/: cool_sun.blend  cool_sun.blend1
blender_scripts/: adaptive_grid.py  select_and_delete.py
examples/: cylinder_out.txt  cylinder_out_pruned.txt  prune_cylinder.txt  shell.sh
ma-rs/: Cargo.toml  README.md  package-lock.json  pyproject.toml
ma-rs/src/: complex.rs  grid.rs  json.rs  lib.rs  permutation.rs  sneaky_matrix.rs  stats.rs  test.rs  wasm.rs
ma-rs/src/snapshots/: mars__tests__snapshot_medial_axes_for_grid-2.snap  mars__tests__snapshot_medial_axes_for_grid-3.snap  mars__tests__snapshot_medial_axes_for_grid.snap  mars__tests__snapshot_medial_axes_for_grid.snap.new
mars-cli/: Cargo.toml
mars-cli/src/: main.rs
mars-core/: Cargo.toml  README.md
mars-core/src/: complex.rs  grid.rs  json.rs  lib.rs  permutation.rs  sneaky_matrix.rs  stats.rs  test.rs
mars-core/src/snapshots/: mars__tests__snapshot_medial_axes_for_grid-3.snap  mars__tests__snapshot_medial_axes_for_grid.snap
mars-wasm/: Cargo.toml  package-lock.json
mars-wasm/src/: lib.rs
pyfiles/: classes.py  classes_loop.py  complex.py  demo.py  examples.py  grid.py  input.py  matrix.py  medial_axis.py  parametrics.py  plot.py  sneaky_matrix.py  utils.py  vineyard.py
test/: test_matrix.py  test_sneaky_matrix.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  Barcode.css  Barcode.tsx  Controls.css  Controls.style.ts  Controls.tsx  Diagram.tsx  FaceInfo.tsx  HoverTooltip.tsx  Legend.tsx  Render.tsx  Selection.tsx  Tab.tsx  Toast.tsx  constants.ts  global.ts  index.css  medialaxes.ts  state.ts  state.tsx  types.ts  useMars.ts  utils.ts  work.ts  worker.ts
web/src/assets/: open_license_svgs.txt
web/src/controls/: BasicGridControls.tsx  BuiltinMeshes.tsx  GridControls.tsx  MedialAxes.tsx  MeshGridControls.tsx  PruningParameters.tsx  UploadComplexFilePicker.tsx  UploadMeshGridFilePicker.tsx  UploadStateFilePicker.tsx
web/src/render/: Complex.tsx  Edge.tsx  Grid.tsx  GridMesh.tsx  MedialAxes.tsx  Sphere.tsx  Triangle.tsx
web/src/ui/: CollapseH4.tsx  Input.tsx  Loader.tsx
web/src/workers/: prune.ts  vineyards.ts
web/src/worrrker/: prune.ts  vineyards.ts  vineyards2.ts
