[package]
name = "ma-rs"
version = "0.1.1"
edition = "2021"

[lib]
name = 'mars'
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "0.3.2"
pyo3 = "0.20.0"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.111"

[profile.release]
debug = 2
