[package]
name = "ma-rs"
version = "0.1.1"
edition = "2021"

[lib]
name = 'mars'
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
float-ord = "0.3.2"
js-sys = "0.3.69"
log = "0.4.20"
pyo3 = { version = "0.20.0", optional = true }
rayon = "1.8.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.190", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde_bytes = "0.11.14"
serde_json = "1.0.111"
wasm-bindgen = { version = "0.2.91", optional = true }


[profile.release]
debug = 2

[features]
default = ["wasm"]
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", 'dep:serde-wasm-bindgen']
