[build-system]
requires = ["maturin>=1.3,<2.0", "poetry-core"]
build-backend = "maturin"

[project]
name = "mars"
requires-python = ">=3.10"
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
requires-python = ">=3.10"
python = ">=3.10"

[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Python bindings for medial axis vineyard"
authors = ["Martin Hafskjold Thoresen <m@mht.wtf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
maturin = "^1.3.0"
