[package]
name = "mars-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.111"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mars_core = { path = "../mars-core" }
rayon = "1.10.0"
