[package]
name = "mars_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = 'mars_wasm'
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0.89"
console_error_panic_hook = "0.1.7"
float-ord = "0.3.2"
insta = { version = "1.40.0", features = ["json"] }
js-sys = "0.3.69"
rmp = "0.8.12"
rmp-serde = "1.1.2"
serde = { version = "1.0.190", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3" }
serde_bytes = "0.11.14"
serde_json = "1.0.111"
wasm-bindgen = { version = "0.2.91" }
mars_core = { path = "../mars-core" }
tracing-wasm = "0.2.1"
tracing = "0.1.40"
